--- a/process-management-app/package.json
+++ b/process-management-app/package.json
@@ -19,10 +19,12 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
     "moment": "^2.30.1",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-google-map-picker": "^1.2.3",
     "react-icons": "^5.3.0",
