--- a/process-management-app/package.json
+++ b/process-management-app/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.1.5",
+    "@mui/x-charts": "^7.23.2",
     "@mui/x-date-pickers": "^7.18.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
@@ -25,6 +26,7 @@
     "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
+    "react-chrono": "^2.6.1",
     "react-dom": "^18.3.1",
     "react-google-map-picker": "^1.2.3",
     "react-icons": "^5.3.0",
