--- a/process-management-app/package.json
+++ b/process-management-app/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
+    "material-react-table": "^3.1.0",
     "moment": "^2.30.1",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
